--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -16,15 +16,18 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
+    "@reduxjs/toolkit": "^1.8.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.8",
     "react-scroll-parallax": "^3.0.4",
     "swiper": "^8.0.7"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/react-redux": "^7.1.23",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^7.11.0",
