feat(nest): add channels api

--- a/apps/nest-app/package.json
+++ b/apps/nest-app/package.json
@@ -26,6 +26,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "3.12.0",
+    "google-auth-library": "^8.1.1",
+    "googleapis": "^105.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5"
