feat(next): add admin, channel page

--- a/apps/next-app/tsconfig.json
+++ b/apps/next-app/tsconfig.json
@@ -16,6 +16,7 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
+      "@/lib/*": ["lib/*"],
       "@/redux/*": ["src/redux/*"],
       "@/page/*": ["src/page/*"],
       "@/components/*": ["src/components/*"],
