--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "next-app",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,7 +18,9 @@
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
     "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.27.2",
     "next": "12.1.0",
+    "qs": "^6.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.8",
