--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - ./apps/postgres:/var/lib/postgresql/data
+      - ./dbs/postgres:/var/lib/postgresql/data
   nest-app:
     image: node:16
     user: '1000:1000'
