--- a/apps/nest-app/package.json
+++ b/apps/nest-app/package.json
@@ -25,7 +25,9 @@
     "@nestjs/core": "^8.4.4",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^3.0.0",
     "@prisma/client": "3.12.0",
+    "express": "^4.18.1",
     "google-auth-library": "^8.1.1",
     "googleapis": "^105.0.0",
     "reflect-metadata": "^0.1.13",
@@ -48,6 +50,9 @@
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
     "prisma": "3.12.0",
+    "prisma-dbml-generator": "^0.9.1",
+    "prisma-docs-generator": "^0.5.0",
+    "prisma-json-schema-generator": "^3.0.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
