feat: add web-crawler app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
 	},
 	"eslint.workingDirectories": [
 			"./apps/nest-app",
-			"./apps/next-app"
+			"./apps/next-app",
+			"./apps/web-crawler"
     ]
 }
