--- a/apps/crawler/package.json
+++ b/apps/crawler/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "web-crawler",
+  "name": "crawler",
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "dev": "nodemon --watch 'src/**/*' -e ts --exec 'ts-node' ./src/server.ts",
     "eslint:check": "eslint .",
     "eslint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "playwright": "^1.24.2"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19",
+    "playwright": "^1.24.2",
+    "qs": "^6.11.0"
   },
   "packageManager": "yarn@3.2.2",
   "devDependencies": {
     "@playwright/test": "^1.24.2",
     "@swc/core": "^1.2.224",
     "@swc/wasm": "^1.2.224",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.6.4",
+    "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "dotenv": "^16.0.1",
