--- a/apps/crawler/tsconfig.json
+++ b/apps/crawler/tsconfig.json
@@ -19,6 +19,9 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
   },
+  "include": [
+    "./src/**/*",
+  ],
   "ts-node": {
     "swc": true
   }
