feat(crawler): add socket.io

--- a/apps/crawler-app/package.json
+++ b/apps/crawler-app/package.json
@@ -9,10 +9,12 @@
     "eslint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
     "playwright": "^1.24.2",
-    "qs": "^6.11.0"
+    "qs": "^6.11.0",
+    "socket.io": "^4.5.1"
   },
   "packageManager": "yarn@3.2.2",
   "devDependencies": {
