--- a/.gitignore
+++ b/.gitignore
@@ -106,10 +106,6 @@ web_modules/
 .env.production.local
 .env.local
 
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
 # Next.js build output
 .next
 out
@@ -117,19 +113,6 @@ out
 # Nuxt.js build / generate output
 .nuxt
 dist
-
-# Gatsby files
-.cache/
-# Comment in the public line in if your project uses Gatsby and not Next.js
-# https://nextjs.org/blog/next-9-1#public-directory-support
-# public
-
-# vuepress build output
-.vuepress/dist
-
-# vuepress v2.x temp and cache directory
-.temp
-.cache
 
 # Docusaurus cache and generated files
 .docusaurus
@@ -161,3 +144,6 @@ dist
 .turbo
 apps/postgres/
 .env
+
+.cache/yarn/*
+!.cache/yarn/.gitkeep
