--- a/apps/nest-app/.yarnrc.yml
+++ b/apps/nest-app/.yarnrc.yml
@@ -1,4 +1,5 @@
-nodeLinker: pnpm
 enableGlobalCache: true
 
-yarnPath: ".yarn/releases/yarn-berry.cjs"
+nodeLinker: pnpm
+
+yarnPath: .yarn/releases/yarn-3.2.2.cjs
