--- a/apps/crawler-app/package.json
+++ b/apps/crawler-app/package.json
@@ -9,6 +9,7 @@
     "eslint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
