--- a/apps/nest-app/package.json
+++ b/apps/nest-app/package.json
@@ -28,7 +28,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.9",
     "@nestjs/serve-static": "^3.0.0",
-    "@prisma/client": "3.12.0",
+    "@prisma/client": "4.2.1",
     "express": "^4.18.1",
     "google-auth-library": "^8.1.1",
     "googleapis": "^105.0.0",
@@ -54,7 +54,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
-    "prisma": "3.12.0",
+    "prisma": "4.2.1",
     "prisma-dbml-generator": "^0.9.1",
     "prisma-docs-generator": "^0.5.0",
     "prisma-json-schema-generator": "^3.0.1",
@@ -65,6 +65,9 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "jest": {
     "moduleFileExtensions": [
