--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -25,6 +25,7 @@
     "qs": "^6.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.34.1",
     "react-redux": "^7.2.8",
     "react-scroll-parallax": "^3.0.4",
     "socket.io-client": "^4.5.1",
