--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - ./dbs/postgres:/var/lib/postgresql/data
+      - ./volumes/postgres:/var/lib/postgresql/data
   crawler-app:
     image: mcr.microsoft.com/playwright:v1.24.2-focal
     user: '1000:1000'
