--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - NEST_URL=http://nest-app:4000/
       - PORT=5000
     volumes:
+      - ./apps/libs:/srv/libs
       - ./apps/crawler-app:/srv/app
       - ./docker/docker-entrypoint.sh:/usr/local/bin/docker-entrypoint.sh
       - ./.cache/yarn:/home/pwuser/.yarn/berry/cache
@@ -52,6 +53,7 @@ services:
       - NODE_ENV=${APP_ENV:-development}
       - DATABASE_URL=postgresql://${DATABASE_USERNAME:-nest}:${DATABASE_PASSWORD:-nest}@postgres:5432/${DATABASE_NAME:-nest}?connect_timeout=300
     volumes:
+      - ./apps/libs:/srv/libs
       - ./apps/nest-app:/srv/app
       - ./docker/docker-entrypoint.sh:/usr/local/bin/docker-entrypoint.sh
       - ./.cache/yarn:/home/node/.yarn/berry/cache
@@ -82,6 +84,7 @@ services:
       - SERVER_NEST_WS_URL=ws://nest-app:5000/
       - PUBLIC_NEST_WS_URL=${PUBLIC_NEST_WS_URL:-ws://127.0.0.1:5000}
     volumes:
+      - ./apps/libs:/srv/libs
       - ./apps/next-app:/srv/app
       - ./docker/docker-entrypoint.sh:/usr/local/bin/docker-entrypoint.sh
       - ./.cache/yarn:/home/node/.yarn/berry/cache
