feat(nest): move JWT_WECRET to .env

--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,12 @@
+# COMMON ENV
 APP_ENV = "development"
+
+# NEST APP ENV
 DATABASE_NAME = "nest"
 DATABASE_USERNAME = "nest"
 DATABASE_PASSWORD = "nest"
 NEST_REPL = '0'
+JWT_WECRET = 'JWT_WECRET'
+
+# NEXT APP ENV
 NEXT_BRAND_NAME = "NEXT_BRAND_NAME"
