--- a/apps/nest-app/package.json
+++ b/apps/nest-app/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start --watch & yarn prisma studio",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "console": "node dist/repl",
