chore: adjust packages name

--- a/apps/crawler-app/package.json
+++ b/apps/crawler-app/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "crawler-app",
+  "name": "@vtuber-clips/crawler-app",
   "version": "0.1.0",
+  "author": "tokileecy",
   "private": true,
   "license": "MIT",
   "scripts": {
