--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "next-app",
+  "name": "@vtuber-clips/next-app",
   "version": "0.1.0",
+  "author": "tokileecy",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
