chore(next): add containers path

--- a/apps/next-app/tsconfig.json
+++ b/apps/next-app/tsconfig.json
@@ -20,6 +20,7 @@
       "@/api/*": ["src/api/*"],
       "@/redux/*": ["src/redux/*"],
       "@/page/*": ["src/page/*"],
+      "@/containers/*": ["src/containers/*"],
       "@/components/*": ["src/components/*"],
       "@/hooks/*": ["src/hooks/*"],
       "@/utils/*": ["src/utils/*"],
