chore: adjust env file quote

--- a/.example.env
+++ b/.example.env
@@ -9,4 +9,4 @@ NEST_REPL = '0'
 JWT_WECRET = 'JWT_WECRET'
 
 # NEXT APP ENV
-NEXT_BRAND_NAME = "NEXT_BRAND_NAME"
+NEXT_BRAND_NAME = 'NEXT_BRAND_NAME'
