--- a/apps/nest-app/package.json
+++ b/apps/nest-app/package.json
@@ -31,7 +31,10 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.9",
     "@nestjs/serve-static": "^3.0.0",
+    "@nestjs/swagger": "^6.0.5",
     "@prisma/client": "4.2.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "express": "^4.18.1",
     "google-auth-library": "^8.1.1",
     "googleapis": "^105.0.0",
