--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
     "@reduxjs/toolkit": "^1.8.4",
+    "@svgr/webpack": "^6.3.1",
     "@vtuber_clip/api": "link:../libs/api/dist",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
