--- a/apps/next-app/tsconfig.json
+++ b/apps/next-app/tsconfig.json
@@ -24,6 +24,7 @@
       "@/components/*": ["src/components/*"],
       "@/hooks/*": ["src/hooks/*"],
       "@/utils/*": ["src/utils/*"],
+      "@/images/*": ["src/images/*"],
       "@/styles/*": ["src/styles/*"]
     }
   },
