--- a/apps/libs/api/package.json
+++ b/apps/libs/api/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "build": "tsc && node ./scripts/build.js"
+    "build": "tsc && node ./scripts/build.js",
+    "eslint:check": "eslint .",
+    "eslint:fix": "eslint . --fix"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -14,6 +16,13 @@
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
