--- a/apps/next-app/.prettierrc.json
+++ b/apps/next-app/.prettierrc.json
@@ -1,8 +1,7 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 2,
-  "semi": false,
   "singleQuote": true,
+  "trailingComma": "all",
+  "tabWidth": 2,
   "useTabs": false,
   "quoteProps": "preserve"
 }
