--- a/apps/crawler-app/package.json
+++ b/apps/crawler-app/package.json
@@ -10,7 +10,7 @@
     "eslint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@vtuber_clip/api": "link:../libs/api/dist",
+    "@vtuber_clip/api": "link:../libs/api/dist::locator=%40vtuber-clips%2Fcrawler-app%40workspace%3A.",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -22,10 +22,10 @@
   "packageManager": "yarn@3.2.2",
   "devDependencies": {
     "@playwright/test": "^1.25.0",
-    "@swc/core": "^1.2.233",
-    "@swc/wasm": "^1.2.233",
+    "@swc/core": "^1.2.237",
+    "@swc/wasm": "^1.2.237",
     "@types/express": "^4.17.13",
-    "@types/node": "^18.7.5",
+    "@types/node": "^18.7.6",
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
