--- a/apps/libs/api/.yarnrc.yml
+++ b/apps/libs/api/.yarnrc.yml
@@ -2,4 +2,8 @@ enableGlobalCache: true
 
 nodeLinker: pnpm
 
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
+
 yarnPath: .yarn/releases/yarn-3.2.2.cjs
