feat: adjsut directory structure

--- a/.example.env
+++ b/.example.env
@@ -1,10 +1,11 @@
 # COMMON ENV
-APP_ENV = "development"
+APP_ENV = 'development'
+WORKSPACE_PATH = '/srv/workspace'
 
 # NEST APP ENV
-DATABASE_NAME = "nest"
-DATABASE_USERNAME = "nest"
-DATABASE_PASSWORD = "nest"
+DATABASE_NAME = 'nest'
+DATABASE_USERNAME = 'nest'
+DATABASE_PASSWORD = 'nest'
 NEST_REPL = '0'
 JWT_WECRET = 'JWT_WECRET'
 
