--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -21,7 +21,7 @@
     "@mui/material": "^5.10.1",
     "@reduxjs/toolkit": "^1.8.4",
     "@svgr/webpack": "^6.3.1",
-    "@vtuber_clip/api": "link:../libs/api/dist::locator=%40vtuber-clips%2Fnext-app%40workspace%3A.",
+    "@vtuber_clip/api": "link:../../libs/api/dist::locator=%40vtuber-clips%2Fnext-app%40workspace%3A.",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "next": "12.2.5",
