--- a/apps/nest-app/package.json
+++ b/apps/nest-app/package.json
@@ -13,6 +13,7 @@
     "start:dev": "nest start --watch --preserveWatchOutput & yarn prisma studio",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:migrate:prod": "yarn prisma migrate deploy && yarn start:prod",
     "console": "node dist/repl",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
