--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -21,23 +21,23 @@
     "@mui/material": "^5.10.1",
     "@reduxjs/toolkit": "^1.8.4",
     "@svgr/webpack": "^6.3.1",
-    "@vtuber_clip/api": "link:../../libs/api/dist::locator=%40vtuber-clips%2Fnext-app%40workspace%3A.",
+    "@vtuber_clip/api": "link:../../libs/api/dist",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "next": "12.2.5",
     "qs": "^6.11.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
-    "react-redux": "^7.2.8",
+    "react-redux": "^8.0.2",
     "react-scroll-parallax": "^3.3.1",
     "socket.io-client": "^4.5.1",
     "swiper": "^8.3.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.45",
+    "@types/node": "18.7.6",
     "@types/qs": "^6.9.7",
-    "@types/react": "17.0.48",
+    "@types/react": "18.0.17",
     "@types/react-redux": "^7.1.24",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
