--- a/apps/nest-app/package.json
+++ b/apps/nest-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vtuber-clips/nest-app",
+  "name": "@browse_clips/nest-app",
   "version": "0.1.0",
   "description": "",
   "author": "tokileecy",
