chore: reconstruct env

--- a/.example.env
+++ b/.example.env
@@ -1,12 +1,22 @@
 # COMMON ENV
 APP_ENV = 'development'
+BRAND_NAME = 'BrowseClips'
 
-# NEST APP ENV
+# DB ENV
 DATABASE_NAME = 'nest'
 DATABASE_USERNAME = 'nest'
 DATABASE_PASSWORD = 'nest'
-NEST_REPL = '0'
-JWT_WECRET = 'JWT_WECRET'
+DB_PORT = '5432'
 
-# NEXT APP ENV
-NEXT_BRAND_NAME = 'NEXT_BRAND_NAME'
+# NEST ENV
+NEST_REPL = '0'
+NEST_JWT_WECRET = 'NEST_JWT_WECRET'
+
+# PUBLIC PORT & URL
+# DB_PORT = '5432'             # if db public is needed
+CRAWLER_PORT = '5000'
+NEST_PORT = '4000'
+PRISMA_STUDIO_PORT = '5555'
+NEXT_PORT = '3000'
+PUBLIC_NEST_URL = 'http://127.0.0.1:4000'
+PUBLIC_NEST_WS_URL = 'ws://127.0.0.1:5000'
