--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,15 @@ version: '3'
 services:
   postgres:
     image: postgres
-    env_file: .env
     networks:
       - browse_clips_default
     container_name: browse_clips-postgres
     environment:
-      POSTGRES_DB: ${DATABASE_NAME:-nest}
-      POSTGRES_USER: ${DATABASE_USERNAME:-nest}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD:-nest}
+      POSTGRES_DB: $DATABASE_NAME
+      POSTGRES_USER: $DATABASE_USERNAME
+      POSTGRES_PASSWORD: DATABASE_PASSWORD
     ports:
-      - '5432:5432'
+      - $DB_PORT:5432
     volumes:
       - ./volumes/postgres:/var/lib/postgresql/data
   crawler-app:
@@ -20,13 +19,12 @@ services:
     user: '1000:1000'
     container_name: browse_clips-crawler-app
     restart: unless-stopped
-    env_file: .env
     networks:
       - browse_clips_default
     environment:
       - NODE_OPTIONS=--max_old_space_size=2048
+      - APP_ENV=$APP_ENV
       - NEST_URL=http://nest-app:4000/
-      - PORT=5000
     volumes:
       - ./libs:/srv/wrokspace/libs
       - ./apps/crawler-app:/srv/wrokspace/apps/crawler-app
@@ -36,22 +34,23 @@ services:
     command: >
       /bin/sh -c "
         yarn install
-        if [ ${APP_ENV:-development} == \"production\" ]; then yarn start; else yarn dev; fi
+        if [ $APP_ENV == \"production\" ]; then yarn start; else yarn dev; fi
       "
     ports:
-      - '5000:5000'
+      - $CRAWLER_PORT:5000
   nest-app:
     image: node:16
     user: '1000:1000'
     container_name: browse_clips-nest-app
     restart: unless-stopped
-    env_file: .env
     networks:
       - browse_clips_default
     environment:
       - NODE_OPTIONS=--max_old_space_size=2048
-      - NODE_ENV=${APP_ENV:-development}
-      - DATABASE_URL=postgresql://${DATABASE_USERNAME:-nest}:${DATABASE_PASSWORD:-nest}@postgres:5432/${DATABASE_NAME:-nest}?connect_timeout=300
+      - APP_ENV=$APP_ENV
+      - NEST_REPL=$NEST_REPL
+      - JWT_WECRET=$NEST_JWT_WECRET
+      - DATABASE_URL=postgresql://$DATABASE_USERNAME:$DATABASE_PASSWORD@postgres:5432/$DATABASE_NAME?connect_timeout=300
     volumes:
       - ./libs:/srv/wrokspace/libs
       - ./apps/nest-app:/srv/wrokspace/apps/nest-app
@@ -61,30 +60,29 @@ services:
     command: >
       /bin/sh -c "
         yarn prisma migrate dev
-        if [ ${APP_ENV:-development} == \"production\" ]; then yarn start:prod; else yarn start:dev; fi
+        if [ $APP_ENV == \"production\" ]; then yarn start:prod; else yarn start:dev; fi
       "
     ports:
-      - '5555:5555'
-      - '4000:4000'
+      - $PRISMA_STUDIO_PORT:5555
+      - $NEST_PORT:4000
     depends_on:
       - postgres
   next-app:
     image: node:16
     user: '1000:1000'
     container_name: browse_clips-next-app
-    env_file: .env
     networks:
       - browse_clips_default
     ports:
-      - '3000:3000'
+      - $NEXT_PORT:3000
     environment:
       - NODE_OPTIONS=--max_old_space_size=2048
-      - NODE_ENV=${APP_ENV:-development}
+      - APP_ENV=$APP_ENV
       - SERVER_NEST_URL=http://nest-app:4000/
-      - PUBLIC_NEST_URL=${PUBLIC_NEST_URL:-http://127.0.0.1:4000}
+      - PUBLIC_NEST_URL=$PUBLIC_NEST_URL
       - SERVER_NEST_WS_URL=ws://nest-app:5000/
-      - PUBLIC_NEST_WS_URL=${PUBLIC_NEST_WS_URL:-ws://127.0.0.1:5000}
-      - BRAND_NAME=${NEXT_BRAND_NAME:-NEXT_BRAND_NAME}
+      - PUBLIC_NEST_WS_URL=$PUBLIC_NEST_WS_URL
+      - BRAND_NAME=$BRAND_NAME
     volumes:
       - ./libs:/srv/wrokspace/libs
       - ./apps/next-app:/srv/wrokspace/apps/next-app
@@ -92,7 +90,7 @@ services:
       - ./.cache/yarn:/home/node/.yarn/berry/cache
     working_dir: /srv/wrokspace/apps/next-app
     command: >
-      /bin/sh -c "if [ ${APP_ENV:-development} == \"production\" ]; then yarn start; else yarn dev; fi"
+      /bin/sh -c "if [ $APP_ENV == \"production\" ]; then yarn start; else yarn dev; fi"
 networks:
   browse_clips_default:
     driver: bridge
