fix(nest): add channel failed

--- a/.example.env
+++ b/.example.env
@@ -11,6 +11,7 @@ DB_PORT = '5432'
 # NEST ENV
 NEST_REPL = '0'
 NEST_JWT_WECRET = 'NEST_JWT_WECRET'
+GOOGLE_API_KEY = 'GOOGLE_API_KEY'
 
 # PUBLIC PORT & URL
 # DB_PORT = '5432'             # if db public is needed
