--- a/apps/crawler-app/package.json
+++ b/apps/crawler-app/package.json
@@ -26,6 +26,7 @@
     "@playwright/test": "^1.25.0",
     "@swc/core": "^1.2.239",
     "@swc/wasm": "^1.2.239",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.6",
     "@types/qs": "^6.9.7",
