--- a/apps/crawler-app/package.json
+++ b/apps/crawler-app/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*' -e ts --exec 'ts-node' ./src/server.ts",
+    "cron": "ts-node ./src/tools/cron",
     "build": "tsc",
     "start": "node ./dist/server.js",
     "eslint:check": "eslint .",
@@ -15,6 +16,7 @@
     "@browse_clips/api": "link:../../libs/api/dist",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "cron": "^2.1.0",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
     "playwright": "^1.25.0",
