--- a/apps/crawler-app/tsconfig.json
+++ b/apps/crawler-app/tsconfig.json
@@ -22,7 +22,7 @@
   "include": [
     "./src/**/*",
   ],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "lib"],
   "ts-node": {
     "swc": true
   }
